<resources>
    <string name="app_name">AstoNews</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="source_category_country">%1$s | %2$s</string>
    <string name="headlines">Headlines</string>
    <string name="saved">Saved</string>
    <string name="sources">Sources</string>
    <string name="date">Date</string>
    <string name="choose_date">Choose date</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="deutsch">Deutsch</string>
    <string name="russian">Русский</string>
    <string name="popular">Popular</string>
    <string name="neww">New</string>
    <string name="relevant">Relevant</string>
</resources>