<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F9FB"
    android:padding="16dp"
    tools:context=".presentation.FiltersFragment">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popularBtn"
            android:checkable="true"
            style="@style/MyButtonBorder"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@drawable/button_selector"
            android:text="@string/popular"
            android:textColor="#191C1D"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newBtn"
            android:checkable="true"
            style="@style/MyButtonBorder"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@drawable/button_selector"
            android:text="@string/neww"
            android:textColor="#191C1D"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/relevantBtn"
            android:checkable="true"
            style="@style/MyButtonBorder"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@drawable/button_selector"
            android:text="@string/relevant"
            android:textColor="#191C1D"
            android:textSize="14sp" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:lineSpacingExtra="16sp"
        android:text="@string/date"
        android:textColor="#191C1D"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@id/toggleButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choose_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:lineSpacingExtra="16sp"
        android:text="@string/choose_date"
        android:textColor="#70787C"
        android:textSize="11sp"
        app:layout_constraintEnd_toStartOf="@id/date_time_picker_iv"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/date_time_picker_iv"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="84dp"
        android:background="@android:color/transparent"
        android:src="@drawable/date_time_inactive"
        app:layout_constraintEnd_toEndOf="@id/toggleButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:lineSpacingExtra="16sp"
        android:text="@string/language"
        android:textColor="#191C1D"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@id/toggleButton"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_marginTop="176dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/toggleButton"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.Chip
            android:id="@+id/russianChip"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/russian"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/englishChip"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deutsch"/>

    </com.google.android.material.chip.ChipGroup>




</androidx.constraintlayout.widget.ConstraintLayout>